# F25_Team1_PowerlineInspectionDrone

Documentation/Meeting Minutes/: Minutes - 2025 -09-16.md  Minutes - 2025 -10-19  Minutes - 2025-09-09.md  Minutes - 2025-09-22.md  Minutes - 2025-10-05.md  Minutes - 2025-10-13.md  Minutes - 2025-11-03.md  Minutes - 2025-11-10.md  Minutes - 2025-11-17.md  Minutes - 2025-11-24.md  Minutes - 2025-12-1.md  Minutes - 2025-9-29.md  Minutes - 2026 -4-01.md  Minutes - 2026-03-11.md  Minutes - 2026-03-25.md  Minutes - 2026-1-28.md  Minutes - 2026-2-04.md  Minutes - 2026-2-11.md  Minutes - 2026-2-18.md  Minutes - 2026-2-27.md  Minutes - 2026-3-04.md  Minutes - 2026-4-08.md  Minutes - 2026-4-15.md  Minutes - 2026-4-22.md  Template.md
Reports/: Project Proposal Specifications.md  Team Contract Specification.md
Reports/Conceptual Design/: Conceptual Design.md
Reports/Detailed Design/Battery Safety & BMS Design/: Battery&BMS.md
Reports/Detailed Design/Control & Communication Design/: Control & Compute.md  DataAcquisition.c  GPS.c  (+2 more)
Reports/Experimental Analysis/: Experimental Analysis.md
Reports/Project Proposal/: Project Proposal Specifications.md  Project Proposal.md
Reports/Team Contract/: Team Contract Specification.md
Software/: CMakeLists.txt
Software/lib/: CMakeLists.txt
Software/src/: CMakeLists.txt  final.c
Software/src/modules/DS3231RTC/: DS3231.c  DS3231.h
Software/src/modules/gps_module/: gps.c  gps.h
Software/src/modules/sdcard/: sd_logger.c  sd_logger.h
Software/src/modules/servoMotor/: mg90s.c  mg90s.h
Software/src/modules/thermal_camera/: MLX90640_API.c  MLX90640_API.h  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h  thermal_detection.c  thermal_detection.h
(+4 files in other folders)
